--- a/Aula03/projeto-vite/package.json
+++ b/Aula03/projeto-vite/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "rules": {
+    "react/prop-types": "off"
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
